--- a/TeamProject [1]/test/main.html
+++ b/TeamProject [1]/test/main.html
@@ -162,32 +162,32 @@
         </div>
         <div class="product">
             <div class="product-item">
-                <img src="testProduct.jpg">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.png">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.png">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.png">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.png">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.png">
+                <img src="testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
