third commit mainHome end

--- a/TeamProject [1]/test/main.html
+++ b/TeamProject [1]/test/main.html
@@ -192,6 +192,14 @@
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
         </div>
+
+
+        <!-- 더보기 -->
+        <div class="morebtn-container">
+        <div class="box-liner2">
+                <button class="morebtn">더보기</button>
+        </div>
+        </div>
     </div>
     </div>
 </div>
