--- a/TeamProject [1]/test/test.html
+++ b/TeamProject [1]/test/test.html
@@ -10,15 +10,15 @@
   <link rel="stylesheet" href="testStyle.css">
 </head>
 
-<header>
-    <div id="header-placeholder"></div>
-</header>
+
 
 <body>
-
-    <!-- 동적로딩 -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
+  <header>
+    <div id="header-placeholder"></div>
+  </header>
+  <!-- 동적로딩 -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
       function loadHTML(url, elementId) {
         fetch(url)
           .then(response => response.text())
@@ -27,11 +27,11 @@
           })
           .catch(error => console.error('Error loading the HTML:', error));
       }
-      
+
       loadHTML('header.html', 'header-placeholder');
       loadHTML('footer.html', 'footer-placeholder');
-      });
-    </script>
+    });
+  </script>
 
   <main>
     <section>
@@ -41,7 +41,7 @@
       <div class="item">
         <div class="choose-all">
           <div>
-            <input type="checkbox" checked>
+            <input type="checkbox" id="check-all">
           </div>
           <div class="unchoose">
             <p>선택해제</p>
@@ -50,61 +50,135 @@
             <button>선택삭제</button>
           </div>
         </div>
-
         <div class="aaa"> <!--이름 아직 안정함-->
           <div class="detail">
             <div class="item-detail">
               <div class="item-info">
-                <input type="checkbox" checked>
+                <input class="item-check" class="item" type="checkbox">
                 <img src="https://via.placeholder.com/80x80">
                 <div class="item-name">
                   <h4>사세 리얼찹라이드손살치킨1kg</h4>
+                  <div class="how-much">1원</div>
                 </div>
               </div>
               <div class="item-option">
                 <div class="option">
-                  <button><i class="bi bi-dash-lg"></i></button>
-                  <span>1</span>
-                  <button><i class="bi bi-plus-lg"></i></button>
+                  <button class="dash" data-id="1">
+                    <i class="bi bi-dash-lg"></i>
+                  </button>
+                  <span class="result" data-id="1">1</span>
+                  <button class="plus" data-id="1">
+                    <i class="bi bi-plus-lg"></i>
+                  </button>
                 </div>
                 <div class="option-delete">
-                  <button type="button" onclick="location.href='#'">X</button>
-                  <p class="won">8,880원</p>
+                  <button type="button" class="X">X</button>
+                  <span class="won" data-id="1">1원</span>
                 </div>
               </div>
             </div>
-
             <div class="item-detail">
               <div class="item-info">
-                <input type="checkbox" checked>
+                <input class="item-check" class="item" type="checkbox">
                 <img src="https://via.placeholder.com/80x80">
                 <div class="item-name">
-                  <h4>사세 리얼찹라이드손살치킨1kg</h4>
+                  <h4>사세 리얼찹라이드손살치킨2kg</h4>
+                  <div class="how-much">11원</div>
                 </div>
               </div>
               <div class="item-option">
                 <div class="option">
-                  <button><i class="bi bi-dash-lg"></i></button>
-                  <span>1</span>
-                  <button><i class="bi bi-plus-lg"></i></button>
+                  <button class="dash" data-id="2"><i class="bi bi-dash-lg"></i></button>
+                  <span class="result" data-id="2">1</span>
+                  <button class="plus" data-id="2"><i class="bi bi-plus-lg"></i></button>
                 </div>
                 <div class="option-delete">
-                  <button type="button" onclick="location.href='#'">X</button>
-                  <p class="won">8,880원</p>
+                  <button type="button" class="X">X</button>
+                  <span class="won" data-id="2">11원</span>
                 </div>
               </div>
             </div>
+            <div class="item-detail">
+              <div class="item-info">
+                <input class="item-check" class="item" type="checkbox">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <h4>사세 리얼찹라이드손살치킨3kg</h4>
+                  <div class="how-much">111원</div>
 
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <button class="dash" data-id="3"><i class="bi bi-dash-lg"></i></button>
+                  <span class="result" data-id="3">1</span>
+                  <button class="plus" data-id="3"><i class="bi bi-plus-lg"></i></button>
+                </div>
+                <div class="option-delete">
+                  <button type="button" class="X">X</button>
+                  <span class="won" data-id="3">111원</span>
+                </div>
+              </div>
+            </div>
+            <div class="item-detail">
+              <div class="item-info">
+                <input class="item-check" class="item" type="checkbox">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <h4>사세 리얼찹라이드손살치킨4kg</h4>
+                  <div class="how-much">1,111원</div>
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <button class="dash" data-id="4">
+                    <i class="bi bi-dash-lg"></i>
+                  </button>
+                  <span class="result" data-id="4">1</span>
+                  <button class="plus" data-id="4">
+                    <i class="bi bi-plus-lg"></i>
+                  </button>
+                </div>
+                <div class="option-delete">
+                  <button type="button" class="X">X</button>
+                  <span class="won" data-id="4">1,111원</span>
+                </div>
+              </div>
+            </div>
+            <div class="item-detail">
+              <div class="item-info">
+                <input class="item-check" class="item" type="checkbox">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
+                  <div class="how-much">11,111원</div>
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <button class="dash" data-id="5">
+                    <i class="bi bi-dash-lg"></i>
+                  </button>
+                  <span class="result" data-id="5">1</span>
+
+                  <button class="plus" data-id="5">
+                    <i class="bi bi-plus-lg"></i>
+                  </button>
+                </div>
+                <div class="option-delete">
+                  <button type="button" class="X">X</button>
+                  <span class="won" data-id="5">11,111원</span>
+                </div>
+              </div>
+            </div>
           </div>
-
-
           <div class="order">
             <div class="price">
               <div>
                 <p>총 선택상품금액</p>
               </div>
               <div>
-                <p> 8,880원</p>
+                <span id="total-price"> 0원</span>
               </div>
             </div>
             <div class="price">
@@ -112,24 +186,22 @@
                 <p>예상 주문 금액</p>
               </div>
               <div>
-                <p> 8,880000원</p>
+                <span id="estimated-price"> 0원</span>
               </div>
             </div>
-            <div class="oredernow">
-              <button>총 1건 주문하기 (12,380원)</button>
+            <div class="oreder-now">
+              <button class="buy" onclick="buy()" id="buy">총 0건 주문하기 (0원)</button>
             </div>
           </div>
-        </div>
 
-      </div>
+        </div>
       </div>
     </section>
   </main>
   <script src="script.js"></script>
-</body>
-
-<footer>
+  <footer>
     <div id="footer-placeholder"></div>
-</footer>
-
+  </footer>
+  <script src="test.js"></script>
+</body>
 </html>
