--- a/snack/배송창-담겨있음.html
+++ b/snack/배송창-담겨있음.html
@@ -40,7 +40,7 @@
       <div class="content">
         <div class="box">
 
-          <div class="collect">
+          <div>
             <div class="date">10월 10일</div>
             <div class="item-detail">
               <div class="item-info">
@@ -60,8 +60,64 @@
               </div>
             </div>
           </div>
-          <div class="collect">
+          <div>
             <div class="date">날짜 넣는곳</div>
+            <div class="item-detail">
+              <div class="item-info">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <div class="order-number">주문번호</div>
+                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <span class="result" data-id="5">1개</span>
+                </div>
+                <div class="option-delete">
+                  <span class="won" data-id="5">11,111원</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item-detail">
+              <div class="item-info">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <div class="order-number">주문번호</div>
+                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <span class="result" data-id="5">1개</span>
+                </div>
+                <div class="option-delete">
+                  <span class="won" data-id="5">11,111원</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div >
+            <div class="date">날짜 넣는곳</div>
+            <div class="item-detail">
+              <div class="item-info">
+                <img src="https://via.placeholder.com/80x80">
+                <div class="item-name">
+                  <div class="order-number">주문번호</div>
+                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
+                </div>
+              </div>
+              <div class="item-option">
+                <div class="option">
+                  <span class="result" data-id="5">1개</span>
+                </div>
+                <div class="option-delete">
+                  <span class="won" data-id="5">11,111원</span>
+                </div>
+              </div>
+            </div>
+
             <div class="item-detail">
               <div class="item-info">
                 <img src="https://via.placeholder.com/80x80">
@@ -153,62 +209,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="collect">
-            <div class="date">날짜 넣는곳</div>
-            <div class="item-detail">
-              <div class="item-info">
-                <img src="https://via.placeholder.com/80x80">
-                <div class="item-name">
-                  <div class="order-number">주문번호</div>
-                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
-                </div>
-              </div>
-              <div class="item-option">
-                <div class="option">
-                  <span class="result" data-id="5">1개</span>
-                </div>
-                <div class="option-delete">
-                  <span class="won" data-id="5">11,111원</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="item-detail">
-              <div class="item-info">
-                <img src="https://via.placeholder.com/80x80">
-                <div class="item-name">
-                  <div class="order-number">주문번호</div>
-                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
-                </div>
-              </div>
-              <div class="item-option">
-                <div class="option">
-                  <span class="result" data-id="5">1개</span>
-                </div>
-                <div class="option-delete">
-                  <span class="won" data-id="5">11,111원</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="item-detail">
-              <div class="item-info">
-                <img src="https://via.placeholder.com/80x80">
-                <div class="item-name">
-                  <div class="order-number">주문번호</div>
-                  <h4>사세 리얼찹라이드손살치킨5kg</h4>
-                </div>
-              </div>
-              <div class="item-option">
-                <div class="option">
-                  <span class="result" data-id="5">1개</span>
-                </div>
-                <div class="option-delete">
-                  <span class="won" data-id="5">11,111원</span>
-                </div>
-              </div>
-            </div>
 
             <div class="item-detail">
               <div class="item-info">
@@ -228,7 +228,7 @@
               </div>
             </div>
           </div>
-          <div class="collect">
+          <div>
             <div class="date">날짜 넣는곳</div>
             <div class="item-detail">
               <div class="item-info">
@@ -323,5 +323,4 @@
       </div>
   </section>
 </body>
-
 </html>
