--- a/TeamProject [1]/test/header.html
+++ b/TeamProject [1]/test/header.html
@@ -12,9 +12,9 @@
     <!-- 처음 우측 메뉴 -->
     <div>
     <ul class="right-menu">
-        <a href="/snack/로그인창.html">로그인</li>
+        <a href="/TeamProject [1]/test/pages/login.html">로그인</li>
         <li style="color: #e2e2e2;"> | </li>
-        <a href="/snack/회원가입.html" class="userData">회원가입</a>
+        <a href="/TeamProject [1]/test/pages/회원가입.html" class="userData">회원가입</a>
         </li>
     </ul>
     </div>
@@ -43,7 +43,7 @@
             <img src="myPage.png" alt="마이페이지 아이콘">
             <span>나의프로필</span>
         </a>
-        <a href="/장바구니" class="shoppingCart">
+        <a href="장바구니.html" class="shoppingCart">
             <img src="shoppingCart.png" alt="장바구니 아이콘">
             <span>장바구니</span>
         </a>
