--- a/TeamProject [1]/test/장바구니.html
+++ b/TeamProject [1]/test/장바구니.html
@@ -7,7 +7,7 @@
   <title>장바구니</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="장바구니testStyle.css">
+  <link rel="stylesheet" href="장바구니Style.css">
 </head>
 
 
@@ -217,7 +217,7 @@
   <footer>
     <div id="footer-placeholder"></div>
   </footer>
-    <script src="test.js"></script>
+    <script src="장바구니.js"></script>
 </body>
 
 
