회원정보 css 수정

--- a/TeamProject [1]/test/header.html
+++ b/TeamProject [1]/test/header.html
@@ -39,7 +39,7 @@
     
     <!-- 메인헤더(우) -->
     <div class="right-mainHeader">
-        <a href="/마이페이지" class="myPage">
+        <a href="/TeamProject [1]/test/pages/배송창-텅.html" class="myPage">
             <img src="myPage.png" alt="마이페이지 아이콘">
             <span>나의프로필</span>
         </a>
