--- a/TeamProject [1]/test/main.html
+++ b/TeamProject [1]/test/main.html
@@ -197,7 +197,7 @@
         <!-- 더보기 -->
         <div class="morebtn-container">
         <div class="box-liner2">
-                <button class="morebtn">더보기</button>
+                <button class="morebtn"><a href="상품정렬.html">더보기</a></button>
         </div>
         </div>
     </div>
@@ -231,8 +231,8 @@
           .catch(error => console.error('Error loading the HTML:', error));
       }
       
-      loadHTML('../fragments/header/header.html', 'header-placeholder');
-      loadHTML('../fragments/footer/footer.html', 'footer-placeholder');
+      loadHTML('header.html', 'header-placeholder');
+      loadHTML('footer.html', 'footer-placeholder');
       });
     </script>
 </body>
