이미지 경로 수정

--- a/TeamProject [1]/test/header.html
+++ b/TeamProject [1]/test/header.html
@@ -24,14 +24,14 @@
     <div class="mainHeader">
     <div class="left-mainHeader">
         <a href="main.html" class="logo">
-            <img src="logo.png" alt="로고">
+            <img src="/TeamProject [1]/test/images/logo.png" alt="로고">
         </a>
 
     <!-- 검색창 -->
     <form class="search-box" action="" method="get">
         <input class="search-txt" type="text" placeholder="찾으시는 제품이 있으신가요?">
         <button class="search-btn" type="submit">
-            <img src="search.png" alt="돋보기 아이콘">
+            <img src="/TeamProject [1]/test/images/search.png" alt="돋보기 아이콘">
         </button>
     </form>
     </div>
@@ -40,11 +40,11 @@
     <!-- 메인헤더(우) -->
     <div class="right-mainHeader">
         <a href="/TeamProject [1]/test/pages/배송창-텅.html" class="myPage">
-            <img src="myPage.png" alt="마이페이지 아이콘">
+            <img src="/TeamProject [1]/test/images/myPage.png" alt="마이페이지 아이콘">
             <span>나의프로필</span>
         </a>
         <a href="장바구니.html" class="shoppingCart">
-            <img src="shoppingCart.png" alt="장바구니 아이콘">
+            <img src="/TeamProject [1]/test/images/shoppingCart.png" alt="장바구니 아이콘">
             <span>장바구니</span>
         </a>
     </div>
@@ -55,7 +55,7 @@
     <div class="category-container">
     <ul class="category">
         <li>
-        <img src="category.png" alt="카테고리 아이콘">
+        <img src="/TeamProject [1]/test/images/category.png" alt="카테고리 아이콘">
         </li>
         <span>카테고리</span>  
         <span style="color: #e2e2e2;"> | </span>            
