--- a/TeamProject [1]/test/상품정렬.html
+++ b/TeamProject [1]/test/상품정렬.html
@@ -18,7 +18,7 @@
   </nav>
       <!-- 마우스 커서 이벤트 -->
       <div class="cursor" style="z-index: 9999;">
-        <img src="logo2.png">
+        <img src="/TeamProject [1]/test/images/logo2.png">
     </div>
     <script>
         document.addEventListener('mousemove', (e) => {
