--- a/TeamProject [1]/test/장바구니.html
+++ b/TeamProject [1]/test/장바구니.html
@@ -45,7 +45,7 @@
 
   <!-- 마우스 효과 -->
   <div class="cursor" style="z-index: 9999;">
-    <img src="logo2.png">
+    <img src="/TeamProject [1]/test/images/logo2.png">
   </div>
 
   <main>
