--- a/TeamProject [1]/test/footer.html
+++ b/TeamProject [1]/test/footer.html
@@ -34,12 +34,12 @@
     <div class="footer-boxContainer" style="background-color: white;">
         <div class="footer-container">
             <div class="footerLogo">
-                <img src="logo.png" alt="로고 아이콘">
+                <img src="/TeamProject [1]/test/images/logo.png" alt="로고 아이콘">
             </div>
             <div class="footerSns">
-                <img src="naver.png" style="margin-right: 50px;" alt="네이버 아이콘">
-                <img src="insta.png" alt="인스타 아이콘">
-                <img src="youtube.png" style="margin-left: 50px; 
+                <img src="/TeamProject [1]/test/images/naver.png" style="margin-right: 50px;" alt="네이버 아이콘">
+                <img src="/TeamProject [1]/test/images/insta.png" alt="인스타 아이콘">
+                <img src="/TeamProject [1]/test/images/youtube.png" style="margin-left: 50px; 
                 height: 30px; width: 30px;" alt="유튜브 아이콘">
             </div>
         
