--- a/TeamProject [1]/test/main.html
+++ b/TeamProject [1]/test/main.html
@@ -19,10 +19,10 @@
     <div class="slider__wrap">
             <div class="slider__img">
                 <div class="slider__inner">
-                    <div class="slider" role="group" aria-label="1/5"><img src="slide01.png" alt="이미지1"></div>
-                    <div class="slider" role="group" aria-label="2/5"><img src="slide02.png" alt="이미지2"></div>
-                    <div class="slider" role="group" aria-label="3/5"><img src="slide03.png" alt="이미지3"></div>
-                    <div class="slider" role="group" aria-label="4/5"><img src="slide04.png" alt="이미지4"></div>
+                    <div class="slider" role="group" aria-label="1/5"><img src="/TeamProject [1]/test/images/slide01.png" alt="이미지1"></div>
+                    <div class="slider" role="group" aria-label="2/5"><img src="/TeamProject [1]/test/images/slide02.png" alt="이미지2"></div>
+                    <div class="slider" role="group" aria-label="3/5"><img src="/TeamProject [1]/test/images/slide03.png" alt="이미지3"></div>
+                    <div class="slider" role="group" aria-label="4/5"><img src="/TeamProject [1]/test/images/slide04.png" alt="이미지4"></div>
                 </div>
             </div>
             <div class="slider__btn">
@@ -107,43 +107,43 @@
         <div class="box-liner">
         <ul class="homeCategory">
             <li>
-                <img src="01.png">
+                <img src="/TeamProject [1]/test/images/01.png">
                 장날 <br> 쿠폰팩
             </li>
             <li>
-                <img src="02.png">
+                <img src="/TeamProject [1]/test/images/02.png">
                 잇잇딜
             </li>
             <li>
-                <img src="03.png">
+                <img src="/TeamProject [1]/test/images/03.png">
                 잇잇이 <br> 만든
             </li>
             <li>
-                <img src="04.png">
+                <img src="/TeamProject [1]/test/images/04.png">
                 간식거리 <br> 최저가
             </li>
             <li>
-                <img src="05.png">
+                <img src="/TeamProject [1]/test/images/05.png">
                 음료 <br> 최저가
             </li>
             <li>
-                <img src="06.png">
+                <img src="/TeamProject [1]/test/images/06.png">
                 소량 <br> 상품관
             </li>
             <li>
-                <img src="07.png">
+                <img src="/TeamProject [1]/test/images/07.png">
                 당일배송
             </li>
             <li>
-                <img src="08.png">
+                <img src="/TeamProject [1]/test/images/08.png">
                 잇잇추천
             </li>
             <li>
-                <img src="09.png">
+                <img src="/TeamProject [1]/test/images/09.png">
                 재고정리 <br> 특가
             </li>
             <li>
-                <img src="10.png">
+                <img src="/TeamProject [1]/test/images/10.png">
                 장바구니
             </li>
         </ul>
@@ -158,36 +158,36 @@
                 <p style="font-weight: bold; font-size: 24px; margin-top: 15px;">
                 🎊잇잇의 신제품 모음집🎊</p>
             </div>
-            <img src="snack.png" alt="과자 이미지">
+            <img src="/TeamProject [1]/test/images/snack.png" alt="과자 이미지">
         </div>
         <div class="product">
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
             <div class="product-item">
-                <img src="testProduct.image.jpg">
+                <img src="/TeamProject [1]/test/images/testProduct.image.jpg">
                 <span>상품 이름</span>
                 <span style="font-size: 16px; font-weight: bold;">10,000원</span>
             </div>
@@ -206,7 +206,7 @@
     
     <!-- 마우스 커서 -->
     <div class="cursor" style="z-index: 9999;">
-        <img src="logo2.png">
+        <img src="/TeamProject [1]/test/images/logo2.png">
     </div>
     <script>
         document.addEventListener('mousemove', (e) => {
