--- a/TeamProject [1]/test/header.html
+++ b/TeamProject [1]/test/header.html
@@ -14,7 +14,7 @@
     <ul class="right-menu">
         <a href="/TeamProject [1]/test/pages/login.html">로그인</li>
         <li style="color: #e2e2e2;"> | </li>
-        <a href="/TeamProject [1]/test/pages/회원가입.html" class="userData">회원가입</a>
+        <a href="/TeamProject [1]/test/pages/signup.html" class="userData">회원가입</a>
         </li>
     </ul>
     </div>
@@ -43,7 +43,7 @@
             <img src="/TeamProject [1]/test/images/myPage.png" alt="마이페이지 아이콘">
             <span>나의프로필</span>
         </a>
-        <a href="장바구니.html" class="shoppingCart">
+        <a href="cart.html" class="shoppingCart">
             <img src="/TeamProject [1]/test/images/shoppingCart.png" alt="장바구니 아이콘">
             <span>장바구니</span>
         </a>
