--- a/TeamProject [1]/test/main.html
+++ b/TeamProject [1]/test/main.html
@@ -197,7 +197,7 @@
         <!-- 더보기 -->
         <div class="morebtn-container">
         <div class="box-liner2">
-                <button class="morebtn"><a href="상품정렬.html">더보기</a></button>
+                <button class="morebtn" onclick='location.href="상품정렬.html"'>더보기</button>
         </div>
         </div>
     </div>
