--- a/TeamProject [1]/test/pages/member-detail.html
+++ b/TeamProject [1]/test/pages/member-detail.html
@@ -24,7 +24,7 @@
           <div class="order">주문/배송</div>
           <div>&gt;</div>
         </div>
-        <div class="detail-select" onclick='location.href="회원정보.html"'>
+        <div class="detail-select" onclick='location.href="mamber-detail.html"'>
           <div class="order">회원정보</div>
           <div>&gt;</div>
         </div>
